# Io

./: .gitignore  Cargo.toml  README.md  config.example.json  nginx.example  test.db  test.db-journal
.cargo/: config.toml
.github/workflows/: release.workflow.yml  workflow.yml
entity/: Cargo.toml
entity/src/: file.rs  file_tokens.rs  lib.rs  library.rs  prelude.rs  user.rs
extras/: set_permission.py
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user.rs  m20231307_000004_create_file_tokens.rs  m20233103_000001_create_user.rs  m20233103_000002_create_library.rs  m20233103_000003_create_file.rs
migrations/2022-01-28-222615_create_user/: up.sql
migrations/2022-02-25-162934_create_libraries/: down.sql  up.sql
migrations/2022-02-25-173438_create_files/: down.sql  up.sql
src/: api.rs  auth.rs  config.rs  docs.rs  eventqueue.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/api/: file.rs  info.rs  library.rs  search.rs  user.rs
src/data_sources/: tmdb.rs
src/models/: file.rs  library.rs  user.rs
src/utils/: indexer.rs  notifications.rs
static/: index.html
static/content/: \  api.js  api_client.js  consts.js  debugger.js  http.js  main.js  notifications.js  theme.js
static/content/modules/: style.css
static/content/modules/admin/: index.html
static/content/modules/admin/user/: all.html  edit.html
static/content/modules/alert/: v01.html
static/content/modules/folder/: authenticated.html
static/content/modules/header/: authenticated.html  unauthenticated.html
static/content/modules/home/: authenticated.html  unauthenticated.html  unverified.html
static/content/modules/misc/: 404.html
static/content/modules/search/: overlay.html  results.html
static/content/modules/user/: login.html  register.html  settings.html
static/js/: main.js
