[package]
name = "io"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-cors = "0.6"
actix-http = "3.2"
actix-service = "2.0"
actix-web-httpauth = "0.7"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }

reqwest = { version = "0.11", features = ["json", "stream"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

pretty_env_logger = "0.4"
log = "0.4"

jsonwebtoken = "8"

chrono = "0.4" 

diesel = { version = "1.4", features = ["postgres", "r2d2"] }

rust-argon2 = "1.0"

uuid = { version = "1", features = ["v4"] }

sysinfo = "0.24"

futures = "0.3"

thiserror = "1.0"

async-trait = "0.1"

anitomy = "0.1"