[package]
name = "io"
version = "0.1.1"
authors = ["NotMarek <me@notmarek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
# actix - web framework
actix-web = "4.3"
actix-cors = "0.6"
actix-http = "3.3"
actix-service = "2.0"
actix-web-httpauth = "0.8"
tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }

# utoipa - swagger docs
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }

# reqwest - http client
reqwest = { version = "0.11", features = ["json", "stream"] }

# serde - json serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# log - logging
pretty_env_logger = "0.4"
log = "0.4"

# jwt - authorization
jsonwebtoken = "8"

# chrono - date and time
chrono = "0.4" 

# sea-orm - database
sea-orm = { version = "0.11", features = [ "debug-print", "runtime-tokio-rustls", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite" ] }


# argon2 - password hashing
rust-argon2 = "1.0"

# uuid - uuid generation
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# sysinfo - system info
sysinfo = "0.28"

# futures - async
futures = "0.3"

# thiserror - error handling
thiserror = "1.0"

# async-trait - async trait 
async-trait = "0.1"

# anitomy - title parser
anitomy = "0.1"

entity = { path = "entity" }
migration = { path = "migration" }