[package]
name = "io"
version = "0.1.1"
authors = ["NotMarek <me@notmarek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
# actix - web framework
actix-web = { version = "4.4", features = ["rustls"] }
actix-cors = "0.6"
actix-http = "3.4"
actix-files = "0.6"
actix-service = "2.0"
actix-web-httpauth = "0.8"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }

# utoipa - swagger docs
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

# reqwest - http client
reqwest = { version = "0.11", default-features = false, features = [
    "stream",
    "json",
    "rustls-tls",
] }

# serde - json serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# log - loggings
pretty_env_logger = "0.5"
log = "0.4"

# jwt - authorization
jsonwebtoken = "9"

# chrono - date and time
chrono = "0.4"

# sea-orm - database
sea-orm = { version = "0.12", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }


# argon2 - password hashing
rust-argon2 = "2.0"

# uuid - uuid generation
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# sysinfo - system info
sysinfo = "0.29"

# futures - async
futures = "0.3"

# thiserror - error handling
thiserror = "1.0"

# async-trait - async trait 
async-trait = "0.1"

# anitomy - title parser
anitomy = "0.2"

entity = { path = "entity" }
migration = { path = "migration" }

async-recursion = "1"
